--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "free-function",
   "displayName": "Free Function",
   "description": "",
-  "version": "0.0.1",
-  "publisher": "Free Function",
+  "version": "0.0.2",
+  "publisher": "free-function",
   "engines": {
     "vscode": "^1.87.0"
   },
@@ -46,5 +46,9 @@
     "@babel/parser": "^7.24.1",
     "@babel/traverse": "^7.24.1",
     "@babel/types": "^7.24.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:yusufayhan0/free-function.git"
   }
 }
