chore: Update README.md and package.json
Fix the image display issue in the README.md file by updating the image URL. Also, update the package.json file to use the HTTPS URL for the repository and fix the icon path.

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:yusufayhan0/free-function.git"
+    "url": "https://github.com/yusufayhan0/free-function.git"
   },
-  "icon": "./src/assets/images/logo/logo.png"
+  "icon": "src/assets/images/logo/logo.png"
 }
